<resources>
    <string name="app_name">ElencoTelefonico</string>
    <string name="action_settings">Impostazioni</string>
    <string name="srch">Cerca</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="search_hint">Cerca incarico o dipendente</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="nome_incarico">Nome Incarico</string>
    <string name="nome_persona">Nome</string>
    <string name="cognome_persona">Cognome</string>
    <string name="tel_num_persona">Numero telefonico</string>
    <string name="email_persona">e-mail</string>
    <string name="cod_fiscale_persona">Codice Fiscale</string>
</resources>
