<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="it.daniso.elencotelefonico.AddActivity"
    tools:showIn="@layout/activity_add">

    <EditText
        android:id="@+id/inputIncarico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome_incarico"
        android:theme="@style/EditTextCustomHolo"
        android:inputType="textCapWords"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </Spinner>

    <EditText
        android:id="@+id/inputCodFiscale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cod_fiscale_persona"
        android:theme="@style/EditTextCustomHolo"
        android:inputType="textCapCharacters"/>

    <EditText
        android:id="@+id/inputNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome_persona"
        android:theme="@style/EditTextCustomHolo"
        android:inputType="textCapWords"/>

    <EditText
        android:id="@+id/inputCognome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cognome_persona"
        android:theme="@style/EditTextCustomHolo"
        android:inputType="textCapWords"/>

    <EditText
        android:id="@+id/inputTelNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tel_num_persona"
        android:theme="@style/EditTextCustomHolo"
        android:inputType="phone"/>

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_persona"
        android:theme="@style/EditTextCustomHolo"
        android:inputType="textEmailAddress" />
</LinearLayout>
